fix(return,sale): replace Collectors.toList() with .toList() sweep (R-023); add distributor inventory controller test (R-024)
R-023: ReturnController.buildEditForm was missed when R-021 fixed SaleController.
Doing a clean sweep: also updated EditReturnForm, RegisterReturnForm,
RegisterSaleForm, and EditSaleForm toLineItemInputs() helpers, removing
the now-unused Collectors import from each form class.

R-024: Added release_populatesNonEmptyDistributorInventories to
ReleaseControllerTest. The test covers the full buildDistributorInventories
path: one distributor with both an allocation and current inventory (sold() =
allocated - current), and one distributor that appears only in
currentByDistributor — the union edge case on lines 252-254 of ReleaseController
that was previously uncovered.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>